--- a/www/css/app.css
+++ b/www/css/app.css
@@ -9770,8 +9770,8 @@ a.button {
   opacity: 0; }
 
 .mh-slide.ng-enter, .mh-slide > .ng-enter {
-  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 400ms;
-  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 400ms; }
+  -webkit-transition: all ease 400ms;
+  transition: all ease 400ms; }
 
 .mh-slide.ng-enter-active, .mh-slide > .ng-enter-active {
   -webkit-transform: translate3d(0, 0, 0) scale(1);
